Anonymous | Login | 2021-01-20 04:25 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0028758 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2017-05-18 14:49 | 2019-10-02 17:49 | ||||
Reporter | bugmaster | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | feature | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | |||||||||
Target Version | [OCCT] 7.2.0 | Fixed in Version | [OCCT] 7.2.0 | ||||||
Summary | 0028758: Visualization - Implement exporting generated image to HRD/EXR images | ||||||||
Description | In order to perform tone mapping in external software. | ||||||||
Steps To Reproduce | Not applicable | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|||||||
|
![]() |
|
(0066275) git (administrator) 2017-05-18 15:05 |
Branch CR28758 has been created by Andrey GOLODAEV. SHA-1: c185bb609b115875de3767ce7ace4a1dfa97777a No new revisions were added by this update. |
(0066276) user815 2017-05-18 15:06 |
Dear kgv, The issue in OCCT tracker have been created. Please find the pach in branch CR28758. |
(0066278) git (administrator) 2017-05-18 15:25 |
Branch CR28758 has been updated forcibly by kgv. SHA-1: 0bc3f4f49933576248a78bad249a1431b8557e3d |
(0066279) git (administrator) 2017-05-18 15:30 |
Branch CR28758 has been updated by kgv. SHA-1: e01b45d8e9c740dfb44757c4b2ae22ceef0a37f1 Detailed log of new commits: Author: age Date: Tue May 16 13:37:50 2017 +0300 // unbind texture |
(0066280) kgv (developer) 2017-05-18 15:33 edited on: 2017-05-18 15:33 |
+ int aCnt = 0; + float* anImageData = reinterpret_cast<float*> (theImage.ChangeData()); + + for (int aRow = 0; aRow < aH; aRow += 2) + { + for (int aCol = 0; aCol < aW; aCol += 3) + { + float aInvNbSamples = 1.f / values[aRow * aW + aCol + aW]; + anImageData[aCnt++] = values[aRow * aW + aCol] * aInvNbSamples; + anImageData[aCnt++] = values[aRow * aW + aCol + 1] * aInvNbSamples; + anImageData[aCnt++] = values[aRow * aW + aCol + 1 + aW] * aInvNbSamples; + } + } The logic is wrong - image height is not involved in computations and image stride (SizeRowBytes()) is ignored. Consider using Image_PixMap::ChangeRow() or Image_PixMap::ChangeValue() methods. |
(0066307) git (administrator) 2017-05-19 12:39 |
Branch CR28758 has been updated by age. SHA-1: 9cddc799d8d208fe349979e8eb7cad5e90b017a4 Detailed log of new commits: Author: age Date: Fri May 19 12:35:39 2017 +0300 0028758: Visualization - Implement exporting generated image to HRD/EXR images Replaced ChangeData to ChangeValue in function BufferDump |
(0066308) user815 2017-05-19 12:43 |
Dear kgv, Please review the changes in the branch CR28758 |
(0066309) git (administrator) 2017-05-19 12:51 |
Branch CR28758_1 has been created by kgv. SHA-1: 6aa603de71f7bd38c4854129c37aacad505a42a8 Detailed log of new commits: Author: age Date: Tue May 16 13:37:50 2017 +0300 0028758: Visualization - Implement exporting generated image to HRD/EXR images OpenGl_View::BufferDump() - added support for dumping RayTracing HDR buffers. Added new buffer type Graphic3d_BT_RGB_RayTraceHdrLeft. |
(0066310) kgv (developer) 2017-05-19 12:52 |
Please test the patch. |
(0066363) apv (tester) 2017-05-22 11:45 |
Dear BugMaster, Branch CR28758_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 6aa603de71f7bd38c4854129c37aacad505a42a8 Number of compiler warnings: occt component: Linux: 4 (0 on master) Windows: 1 (0 on master) MasOS: 3 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1192 New warnings have been detected during OCCT component building on Linux: http://jenkins-test-05.nnov.opencascade.com/view/CR28758_1-master/job/CR28758_1-master-OCCT-Debian70-64-opt-compile/1/warnings19Result/ [^] on Windows: http://jenkins-test-05.nnov.opencascade.com/view/CR28758_1-master/job/CR28758_1-master-OCCT-Windows-64-VC10-opt-compile/1/warnings38Result/ [^] on MacOS: http://jenkins-test-05.nnov.opencascade.com/view/CR28758_1-master/job/CR28758_1-master-OCCT-MacOS-opt-compile/1/warnings8Result/ [^] Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 92798922 / 91674219 [+1.23%] Total CPU difference: 18682.320000000203 / 18660.720000000343 [+0.12%] Testing on Windows: Total MEMORY difference: 58427976 / 58426283 [+0.00%] Total CPU difference: 17476.46442789869 / 17319.43382129878 [+0.91%] |
(0066365) apv (tester) 2017-05-22 11:46 |
Dear Kirill, Branch CR28758_1 has been rejected due to: - additional warnings |
(0066385) git (administrator) 2017-05-22 13:09 |
Branch CR28758_2 has been created by age. SHA-1: 33501dfc4556a018c9c5b12b1e154d7b850dd3e6 Detailed log of new commits: Author: age Date: Tue May 16 13:37:50 2017 +0300 0028758: Visualization - Implement exporting generated image to HRD/EXR images OpenGl_View::BufferDump() - added support for dumping RayTracing HDR buffers. Added new buffer type Graphic3d_BT_RGB_RayTraceHdrLeft. |
(0066386) age (developer) 2017-05-22 13:13 |
Dear kgv, Fixed warnings, Please review the branch CR28758_2 |
(0066390) kgv (developer) 2017-05-22 13:44 edited on: 2017-05-22 13:44 |
Dar age, > Branch CR28758_2 has been created by age. Please next time follow recommended bug advancement workflow - push modifications as dedicated commits on top of previous patch (e.g. branch CR28758_1) and than pus squashed changes into new branch (e.g. CR28758_2). |
(0066391) kgv (developer) 2017-05-22 13:44 |
Please test the patch. |
(0066451) apv (tester) 2017-05-23 12:34 |
Dear BugMaster, Branch CR28758_2 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 33501dfc4556a018c9c5b12b1e154d7b850dd3e6 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1178 Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 92364120 / 91648419 [+0.78%] Total CPU difference: 18721.57000000026 / 18660.780000000344 [+0.33%] Testing on Windows: Total MEMORY difference: 58426303 / 58426283 [+0.00%] Total CPU difference: 17557.319746198595 / 17319.43382129878 [+1.37%] |
(0066452) apv (tester) 2017-05-23 12:34 |
Dear BugMaster, Please integrate branch CR28758_2 into the occt git-repository master. |
(0066781) git (administrator) 2017-05-29 16:06 |
Branch CR28758 has been deleted by kgv. SHA-1: 9cddc799d8d208fe349979e8eb7cad5e90b017a4 |
(0066782) git (administrator) 2017-05-29 16:06 |
Branch CR28758_1 has been deleted by kgv. SHA-1: 6aa603de71f7bd38c4854129c37aacad505a42a8 |
(0066783) git (administrator) 2017-05-29 16:06 |
Branch CR28758_2 has been deleted by kgv. SHA-1: 33501dfc4556a018c9c5b12b1e154d7b850dd3e6 |
![]() |
|||
occt: master 38d90bb3
Timestamp: 2017-05-16 10:37:50 Author: age Committer: bugmaster [ Details ] [ Diff ] |
0028758: Visualization - Implement exporting generated image to HRD/EXR images OpenGl_View::BufferDump() - added support for dumping RayTracing HDR buffers. Added new buffer type Graphic3d_BT_RGB_RayTraceHdrLeft. |
||
mod - src/Graphic3d/Graphic3d_BufferType.hxx | [ Diff ] [ File ] | ||
mod - src/Image/Image_AlienPixMap.cxx | [ Diff ] [ File ] | ||
mod - src/OpenGl/OpenGl_View.cxx | [ Diff ] [ File ] | ||
mod - src/OpenGl/OpenGl_View.hxx | [ Diff ] [ File ] | ||
mod - src/V3d/V3d_View.cxx | [ Diff ] [ File ] | ||
mod - src/ViewerTest/ViewerTest.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2017-05-18 14:49 | user815 | New Issue | |
2017-05-18 14:49 | user815 | Assigned To | => user815 |
2017-05-18 14:50 | user815 | Status | new => assigned |
2017-05-18 14:52 | user815 | Summary | 0028465: Implement exporting generated image to HRD/EXR images => Implement exporting generated image to HRD/EXR images |
2017-05-18 14:55 | kgv | Summary | Implement exporting generated image to HRD/EXR images => Visualization - Implement exporting generated image to HRD/EXR images |
2017-05-18 14:55 | kgv | Severity | minor => feature |
2017-05-18 14:55 | kgv | Product Version | 7.2.0 => |
2017-05-18 14:56 | kgv | Relationship added | related to 0028465 |
2017-05-18 14:56 | kgv | Relationship added | related to 0028744 |
2017-05-18 15:05 | git | Note Added: 0066275 | |
2017-05-18 15:06 | user815 | Note Added: 0066276 | |
2017-05-18 15:06 | user815 | Assigned To | user815 => kgv |
2017-05-18 15:06 | user815 | Status | assigned => resolved |
2017-05-18 15:06 | user815 | Steps to Reproduce Updated | View Revisions |
2017-05-18 15:25 | git | Note Added: 0066278 | |
2017-05-18 15:30 | git | Note Added: 0066279 | |
2017-05-18 15:33 | kgv | Note Added: 0066280 | |
2017-05-18 15:33 | kgv | Assigned To | kgv => user815 |
2017-05-18 15:33 | kgv | Status | resolved => assigned |
2017-05-18 15:33 | kgv | Note Edited: 0066280 | View Revisions |
2017-05-19 12:39 | git | Note Added: 0066307 | |
2017-05-19 12:43 | user815 | Note Added: 0066308 | |
2017-05-19 12:43 | user815 | Assigned To | user815 => kgv |
2017-05-19 12:43 | user815 | Status | assigned => resolved |
2017-05-19 12:51 | git | Note Added: 0066309 | |
2017-05-19 12:52 | kgv | Note Added: 0066310 | |
2017-05-19 12:52 | kgv | Assigned To | kgv => bugmaster |
2017-05-19 12:52 | kgv | Status | resolved => reviewed |
2017-05-19 13:24 | bugmaster | Reporter | user815 => bugmaster |
2017-05-19 13:24 | bugmaster | Assigned To | bugmaster => age |
2017-05-19 15:37 | apv | Assigned To | age => apv |
2017-05-19 17:13 | apv | Test case number | => Not needed |
2017-05-22 11:45 | apv | Note Added: 0066363 | |
2017-05-22 11:45 | apv | Assigned To | apv => kgv |
2017-05-22 11:45 | apv | Status | reviewed => assigned |
2017-05-22 11:46 | apv | Note Added: 0066365 | |
2017-05-22 11:52 | kgv | Assigned To | kgv => age |
2017-05-22 13:09 | git | Note Added: 0066385 | |
2017-05-22 13:13 | age | Note Added: 0066386 | |
2017-05-22 13:13 | age | Assigned To | age => kgv |
2017-05-22 13:13 | age | Status | assigned => resolved |
2017-05-22 13:44 | kgv | Note Added: 0066390 | |
2017-05-22 13:44 | kgv | Note Edited: 0066390 | View Revisions |
2017-05-22 13:44 | kgv | Note Added: 0066391 | |
2017-05-22 13:44 | kgv | Assigned To | kgv => bugmaster |
2017-05-22 13:44 | kgv | Status | resolved => reviewed |
2017-05-22 13:55 | apv | Assigned To | bugmaster => apv |
2017-05-23 12:34 | apv | Note Added: 0066451 | |
2017-05-23 12:34 | apv | Assigned To | apv => bugmaster |
2017-05-23 12:34 | apv | Status | reviewed => tested |
2017-05-23 12:34 | apv | Note Added: 0066452 | |
2017-05-26 14:28 | bugmaster | Changeset attached | => occt master 38d90bb3 |
2017-05-26 14:29 | bugmaster | Status | tested => verified |
2017-05-26 14:29 | bugmaster | Resolution | open => fixed |
2017-05-29 16:06 | git | Note Added: 0066781 | |
2017-05-29 16:06 | git | Note Added: 0066782 | |
2017-05-29 16:06 | git | Note Added: 0066783 | |
2017-09-29 16:18 | aiv | Fixed in Version | => 7.2.0 |
2017-09-29 16:25 | aiv | Status | verified => closed |
2019-10-02 17:49 | kgv | Relationship replaced | has duplicate 0028465 |
Copyright © 2000 - 2021 MantisBT Team |