0028758: Visualization - Implement exporting generated image to HRD/EXR images

OpenGl_View::BufferDump() - added support for dumping RayTracing HDR buffers.
Added new buffer type Graphic3d_BT_RGB_RayTraceHdrLeft.