src/Graphic3d/Graphic3d_BufferType.hxx
@@ -19,7 +19,8 @@ typedef enum
 {
   Graphic3d_BT_RGB,   //!< color buffer without alpha component
   Graphic3d_BT_RGBA,  //!< color buffer
-  Graphic3d_BT_Depth  //!< depth buffer
+  Graphic3d_BT_Depth,  //!< depth buffer
+  Graphic3d_BT_RGB_RayTraceHdrLeft //!< left view HDR color buffer for Ray-Tracing
 } Graphic3d_BufferType;
 
 #endif // _Graphic3d_BufferType_H__
